test/types/seq/bradc/length.modify.good
Error: illegal assignment to sequence's length (length.modify.chpl:8)
